paven-example/nginx-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-nodeport-svc
spec:
  selector:
    app: nginx-label
  type: NodePort
  ports:
    - port: 8082
      targetPort: 80
      nodePort: 30000
