paven-example/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
    - host: nginx-demo.local
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: nginx-cluster-svc
                port:
                  number: 8082
